@@ -2,6 +2,13 @@ fidoconfig 0.91
 --------------
 
 ----- cvs ci ------
+Thu Jan 20 15:10:29 NOVT 2000
+max (patch from Serguei Revtov):
+* fecf2fconf: added wthitespace before "-b msgbasetype"
+* check second parameter in parseFileName
+* carbonDelete don't movin' messages to BadArea now
+
+----- cvs ci ------
 Sun Jan 16 14:10:00 CET 2000
 sms:
 * added warning if dupeHistoryDir is not set
